--- a/about.html
+++ b/about.html
@@ -27,16 +27,16 @@
          <header class="header_section">
             <div class="container">
                <nav class="navbar navbar-expand-lg custom_nav-container ">
-                  <a class="navbar-brand" href="index.html"><img width="50" src="images/11.png" alt="#" /></a>
+                  <a class="navbar-brand" href="index.html"><img width="150" src="images/11.png" alt="#" /></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class=""> </span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                      <ul class="navbar-nav">
-                        <li class="nav-item">
+                        <li class="nav-item active">
                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item dropdown active">
+                       <li class="nav-item dropdown">
                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Pages <span class="caret"></span></a>
                            <ul class="dropdown-menu">
                               <li><a href="about.html">About</a></li>
@@ -118,7 +118,7 @@
                </nav>
             </div>
          </header>
-         <!-- end header section -->
+         <!-- end header section -->   
       </div>
       <!-- inner page section -->
       <section class="inner_page_head">
@@ -133,7 +133,7 @@
          </div>
       </section>
       <!-- end inner page section -->
-      <!-- why section -->
+<!-- why section -->
       <section class="why_section layout_padding">
          <div class="container">
             <div class="heading_container heading_center">
@@ -236,7 +236,7 @@
                            Fast Delivery
                         </h5>
                         <p>
-                           variations of passages of Lorem Ipsum available
+Pesananmu langsung kami proses secepat mungkin, jadi barang preloved favorit bisa segera sampai di tanganmu
                         </p>
                      </div>
                   </div>
@@ -351,8 +351,7 @@
                            Free Shiping
                         </h5>
                         <p>
-                           variations of passages of Lorem Ipsum available
-                        </p>
+Nikmati gratis ongkir ke berbagai daerah, bikin belanja jadi makin hemat tanpa ribet dan jadi makin sat-set                     </p>
                      </div>
                   </div>
                </div>
@@ -372,8 +371,7 @@
                            Best Quality
                         </h5>
                         <p>
-                           variations of passages of Lorem Ipsum available
-                        </p>
+Semua barang preloved sudah dicek kualitasnya, terjamin masih layak pakai, stylish, dan awet                        </p>
                      </div>
                   </div>
                </div>
