--- a/contact.html
+++ b/contact.html
@@ -27,16 +27,16 @@
          <header class="header_section">
             <div class="container">
                <nav class="navbar navbar-expand-lg custom_nav-container ">
-                  <a class="navbar-brand" href="index.html"><img width="50" src="images/11.png" alt="#" /></a>
+                  <a class="navbar-brand" href="index.html"><img width="150" src="images/11.png" alt="#" /></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class=""> </span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                      <ul class="navbar-nav">
-                        <li class="nav-item">
+                        <li class="nav-item active">
                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item dropdown">
+                       <li class="nav-item dropdown">
                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Pages <span class="caret"></span></a>
                            <ul class="dropdown-menu">
                               <li><a href="about.html">About</a></li>
@@ -49,7 +49,7 @@
                         <li class="nav-item">
                            <a class="nav-link" href="blog_list.html">Blog</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
@@ -155,7 +155,7 @@
          </div>
       </section>
       <!-- end why section -->
-      <!-- arrival section -->
+     <!-- arrival section -->
       <section class="arrival_section">
          <div class="container">
             <div class="box">
@@ -166,12 +166,11 @@
                   <div class="col-md-6 ml-auto">
                      <div class="heading_container remove_line_bt">
                         <h2>
-                           #NewArrivals
+                           #LatestPreloved
                         </h2>
                      </div>
                      <p style="margin-top: 20px;margin-bottom: 30px;">
-                        Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
-                     </p>
+Temukan koleksi terbaru! Setiap item sudah melalui proses seleksi untuk memastikan kualitas tetap terjaga, layak pakai, dan siap bikin tampilanmu makin keren. Belanja lebih hemat, tetap stylish, dan dukung gaya hidup berkelanjutan bersama kami                     </p>
                      <a href="">
                      Shop Now
                      </a>
